# synthetic_data_generator

./: README.md  main.py  pyproject.toml  requirement.txt  streamlit_ui.py
generator_data/: data_genarater.py
sample_data/: sample_products.csv
